# uncrx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  artifacts.json  changelog.rss  index.html  oranda.json  uncrx-rs-installer.ps1.txt  uncrx-rs-installer.sh.txt
.github/workflows/: release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.2.2/: index.html
changelog/v0.2.3/: index.html
src/: lib.rs  main.rs  tui_app.rs
src/cli/: errors.rs  helpers.rs
src/mock/: test-extension.crx
src/uncrx/: constants.rs  helpers.rs  types.rs
tests/: cli_extraction_test.rs  integration_tests.rs
